--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,15 @@
 *.zip
 *.pdf
 
+
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-*.DS_Store
 .DS_Store
+*.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
